<resources>
    <string name="app_name">CoffeeOrdering</string>
    <string name="Toppings">Choose Toppings:</string>
    <string name="choco">Chocolate</string>
    <string name="cream">Cream</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>
    <string name="summary">ORDER SUMMARY</string>
    <string name="coffee_pic">coffee_pic</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity_btw">0</string>
    <string name="textview">TextView</string>
</resources>
